--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "birdlgd"
+name = "lightwatcher"
 version = "0.1.0"
 edition = "2021"
 
@@ -12,3 +12,5 @@ serde = { version = "1", features = ["derive"] }
 serde_cbor = "0"
 serde_json = "1"
 lazy_static = "1.4.0"
+async-trait = "0.1.68"
+rayon = "1.7.0"
