--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ serde_json = "1"
 lazy_static = "1.4.0"
 async-trait = "0.1.68"
 rayon = "1.7.0"
-actix-web = "4.3.1"
 tokio = { version = "1.28.0", features = ["full"] }
 futures = "0.3.28"
 bytes = { version = "1.4.0", features = ["serde"] }
+axum = "0.6.18"
