--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,7 @@ rayon = "1.7.0"
 tokio = { version = "1.28.0", features = ["full"] }
 futures = "0.3.28"
 bytes = { version = "1.4.0", features = ["serde"] }
-axum = "0.6.18"
+axum = { version = "0.7", features = ["tracing"] }
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tower-http = { version = "0.5.2", features = ["trace"] }
