--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [x86_64-unknown-linux-musl]
+        - target: x86_64-unknown-linux-musl
+          archive: tar.gz tar.xz tar.zst
+
     steps:
       - uses: actions/checkout@master
       - name: Compile and release
