--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,4 @@ bytes = { version = "1.4.0", features = ["serde"] }
 axum = { version = "0.7", features = ["tracing"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-tower-http = { version = "0.5.2", features = ["trace"] }
+tower-http = { version = "0.5.2", features = ["trace", "compression-br", "compression-deflate", "compression-zstd", "compression-gzip"] }
