--- a/.envrc
+++ b/.envrc
@@ -1,1 +1,8 @@
-use flake
+# Also stolen from helix.
+watch_file shell.nix
+watch_file default.nix
+watch_file flake.lock
+
+# try to use flakes, if it fails use normal nix (ie. shell.nix)
+use flake || use nix
+eval "$shellHook"
