--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,8 +14,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        - target: x86_64-unknown-linux-musl
-          archive: tar.gz tar.xz tar.zst
+        include:
+          - target: x86_64-unknown-linux-musl
+            archive: tar.gz tar.xz tar.zst
 
     steps:
       - uses: actions/checkout@master
